# scl-utils

./: .sparkleshare  CMakeLists.txt  Makefile  SparkleShare.txt  brp-scl-compress  macros.scl  scl  scl.1  scl.attr  scl.bash  scl.c  scl_source  sclbuild  scldeps.sh
doc/: scl.1
rpm/: brp-scl-python-bytecompile  macros.scl  scl.attr  sclbuild.attr  scldeps.sh
shell/: func_scl.csh  scl-completion.bash  scl-init.csh  scl-init.sh  scl_source
src/: CMakeLists.txt  args.c  args.h  config.h.cmake  debug.c  debug.h  errors.h  fallback.c  fallback.h  lib_common.c  lib_common.h  scl.c  scllib.c  scllib.h  sclmalloc.c  sclmalloc.h
src/helpers/: scl_enabled
tests/: CMakeLists.txt  dict.c  dict.h  test_args.c  test_build.sh  test_common.c  test_common.h  test_scllib.c
