CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(scl-utils C)
SET(scl_VERSION_MAJOR 2)
SET(scl_VERSION_MINOR 0)
SET(scl_VERSION_PATCH 1)

IF(DEFINED scl_VERSION_PATCH)
SET(scl_VERSION
    "${CMAKE_PROJECT_NAME}-${scl_VERSION_MAJOR}.${scl_VERSION_MINOR}.${scl_VERSION_PATCH}")
ELSE(DEFINED scl_VERSION_PATCH)
SET(scl_VERSION
    "${CMAKE_PROJECT_NAME}-${scl_VERSION_MAJOR}.${scl_VERSION_MINOR}")
ENDIF(DEFINED scl_VERSION_PATCH)

ADD_CUSTOM_TARGET(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
ADD_CUSTOM_TARGET(check COMMAND ${CMAKE_CTEST_COMMAND} --output-on-failure)

INCLUDE(InstallRequiredSystemLibraries)

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "scl - base package for software
collections")
SET(CPACK_PACKAGE_VENDOR "Jan Zeleny")
SET(CPACK_PACKAGE_VERSION_MAJOR ${scl_VERSION_MAJOR})
SET(CPACK_PACKAGE_VERSION_MINOR ${scl_VERSION_MINOR})
SET(CPACK_PACKAGE_VERSION_PATCH ${scl_VERSION_PATCH})
SET(CPACK_STRIP_FILES "scl")
SET(CPACK_SOURCE_IGNORE_FILES "/build/" "\\\\.git" ".*tags")
SET(CPACK_SOURCE_GENERATOR "TBZ2")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME ${scl_VERSION})

INCLUDE(CPack)

INSTALL(FILES rpm/macros.scl DESTINATION /etc/rpm)
INSTALL(FILES rpm/scl.attr DESTINATION /usr/lib/rpm/fileattrs)
INSTALL(FILES rpm/sclbuild.attr DESTINATION /usr/lib/rpm/fileattrs)
FILE(GLOB rpmHelpers "rpm/brp-scl-*")
INSTALL(PROGRAMS ${rpmHelpers} rpm/scldeps.sh DESTINATION /usr/lib/rpm)

INSTALL(FILES doc/scl.1 DESTINATION share/man/man1)
INSTALL(FILES shell/scl-completion.bash DESTINATION /etc/bash_completion.d)
INSTALL(PROGRAMS shell/scl_enabled DESTINATION /usr/bin)
INSTALL(PROGRAMS shell/scl_source DESTINATION /usr/bin)

INSTALL(FILES shell/scl-init.sh DESTINATION /etc/profile.d)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
ENABLE_TESTING()
ADD_SUBDIRECTORY(src)
#ADD_SUBDIRECTORY(tests)
